--- a/qemu-0.10.0/qemu-doc.texi
+++ b/qemu-0.10.0/qemu-doc.texi
@@ -253,8 +253,12 @@ Use @var{file} as hard disk 0, 1, 2 or 3 image (@pxref{disk_images}).
 
 @item -cdrom @var{file}
 Use @var{file} as CD-ROM image (you cannot use @option{-hdc} and
-@option{-cdrom} at the same time). You can use the host CD-ROM by
-using @file{/dev/cdrom} as filename (@pxref{host_drives}).
+@option{-cdrom} at the same time).  If @var{file} is a @file{.cue}
+description, QEMU will automatically open the referenced @file{.bin}
+image and emulate CD audio playback. Games using Red Book audio will
+play music just like from a real disc. You can use
+the host CD-ROM by using @file{/dev/cdrom} as filename
+(@pxref{host_drives}).
 
 @item -drive @var{option}[,@var{option}[,@var{option}[,...]]]
 
